[package]
name = "cargo-rr"
version = "0.2.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"
description = "A light wrapper around rr, the time-travelling debugger"
license = "MIT"
keywords = ["rr", "debug", "debugger", "test"]
categories = ["development-tools"]
repository = "https://github.com/danielzfranklin/cargo-rr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "0.3.21"
anyhow = "1.0.40"
clap = "2.33.3"
cargo_metadata = "0.15.0"
camino = "1.0.4"
ctrlc = "3.1.9"
tracing = "0.1.25"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
seacan = "0.1.0"
skim = "0.9.4"
