[package]
name = "cargo-rr"
version = "0.3.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"
description = "A light wrapper around rr, the time-travelling debugger"
license = "MIT"
keywords = ["rr", "debug", "debugger", "test"]
categories = ["development-tools"]
repository = "https://github.com/danielzfranklin/cargo-rr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive"] }
cargo_metadata = "0.15.0"
camino = "1.1.1"
ctrlc = "3.2.3"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
seacan = "0.1.0"
skim = "0.9.4"
